EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/23/2011==
JJ: (Akkadius) Fixed camera shake usage output.

==05/22/2011==
KLS and Co: 
-All liquid should count for skill ups.
-Finished unified quest interface... this is fairly large and will probably have a few problems here and there; report them to me and ill fix them asap.  
The goal behind the system is to allow more than one scripting system to work at a time (though with limited interaction due to pre-existing implementation limitation).  
This was a feature requested by the Dalaya community as they plan to merge back to the eqemu codebase and clients but are stuck with an old parser and thousands of files 
that can't be realistically rewritten in a short time frame.

==05/20/2011==
JJ: Doubled buffer for tradeskill search when using experiment mode. Outputs message in error log when matches exceed buffer.

==05/17/2011==
JJ: Changed tradeskills to distinguish world containers in multiple recipe matches. Split invalid container vs. non-unique recipe error log entries. Allowed server to select first match for duplicate recipe contents.

==05/16/2011==
JJ: (Zothen) UCS message logic fix.
JJ: (Zothen) Learning basics clean name fix.

==05/09/2011==
KLS: (lerxst2112) *nix compile fix.
KLS: Added #picklock #sensetrap and #disarmtrap for LDoN traps since they still don't work quite right on the newer clients because we don't implement destructable objects yet.

==05/08/2011==
Congdar: (Timothy_nonax) Add Bot Command ( #bot pull )

==05/03/2011==
Trevius: (Vaion) Fix for focus effect decay over max level.
Trevius: (Zothen) Crash fix for UCS.
Trevius: Rule added for Skill Caps Max Level to resolve issues with servers that have Chars over level 75 after Rev1875.

Optional SQL: utils/sql/svn/1889_optional_skill_cap_rule.sql

==05/02/2011==
Secrets: Added OP_CameraEffect for Titanium.